Name:              roman
Version:           1.0
Build-Type:        Simple
Author:            Gregor Pogacnik
Synopsis:          Toy roman numeral converter
Cabal-version:     >= 1.22

Library
  Exposed-Modules: Roman
  hs-source-dirs: test, src
  default-language: Haskell2010
  build-depends: base >= 4.6, containers >= 0.5.6.3

Executable args
  main-is:        args.hs
  hs-source-dirs: test, src
  default-language: Haskell2010
  build-depends: base >= 4.6, containers >= 0.5.6.3

Executable interact
  main-is:        interact.hs
  hs-source-dirs: test, src
  default-language: Haskell2010
  build-depends: base >= 4.6, containers >= 0.5.6.3

Test-suite quickcheck 
  build-depends:       base >= 4.6, containers >= 0.5.6.3, QuickCheck >= 2.8.1
  default-language:    Haskell2010
  hs-source-dirs:      test, src
  main-is:             QuickCheck.hs
  type:                exitcode-stdio-1.0

Test-suite doctests
  build-depends:       base >= 4.6, containers >= 0.5.6.3, Glob >= 0.7.5, doctest >= 0.10.1
  default-language:    Haskell2010
  hs-source-dirs:      test, src
  main-is:             DocTests.hs
  type:                exitcode-stdio-1.0

